# embedded-futbolito

./: Cargo.toml
src/: main.rs  parser.rs  service.rs  types.rs
templates/: card_template.json  manual_result.json  manual_template.json  new_card.json  output_fut.json  output_fut_template.json  test.json
